--- a/_config copy.yml
+++ b/_config copy.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Leading Change in Tech
+title: Leading Change in Tech & Digital Transformation
 email: peter@sandstre.am
 url: https://www.sandstream.am
-description: "<p>Peter Sandström stands at the forefront of digital strategy and technological integration, guiding businesses to excel and lead in the dynamic digital age with seasoned expertise and strategic foresight.</p>"
+description: "<p>Under the banner of 'Visionary Leadership for Your Digital Frontier,' Peter Sandström delivers transformative strategies and cutting-edge technology integration, empowering your business to not just navigate but lead the digital era with unparalleled expertise and strategic acumen.</p><p>1) Amplified Intelligence </p>"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
