--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Leading Change in Tech
-email: peter@sandstre.am
+title: Interim ledning inom Tech
+email: hello@sandstre.am
 url: https://www.sandstream.am
-description: "<p>Peter Sandström stands at the forefront of digital strategy and technological integration, guiding businesses to excel and lead in the dynamic digital age with seasoned expertise and strategic foresight.</p>"
+description: "<p>Peter Sandström är i framkanten av digital strategi och teknisk integration, och han leder företag genom den dynamiska digitala eran med djupgående expertis och strategisk insikt.</p>"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
