--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Interim ledning inom Tech
 email: hello@sandstre.am
 url: https://www.sandstream.am
-description: "<p>Peter Sandström är i framkanten av digital strategi och teknisk integration, och han leder företag genom den dynamiska digitala eran med djupgående expertis och strategisk insikt.</p>"
+description: "<p>Peter Sandström är i framkanten av digital strategi och teknisk innovation, och han leder företag genom den dynamiska digitala eran med djupgående expertis och strategisk insikt.</p>"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
